--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,6 @@ dependencies:
   - python
   - numpy
   - pandas
-  - ase
-  - asap3
   - arxiv
   - asttokens
   - certifi
@@ -51,3 +49,4 @@ dependencies:
   - wcwidth
   - wget
   - wheel
+  - utils
